# serde-typeinfo

./: Cargo.toml  README.md
.github/workflows/: gh-pages.yml  rust.yml
src/: error.rs  lib.rs  serializer.rs  tag.rs
